--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   get_it: ^8.0.3
   flutter_contacts: ^1.1.9+2
   emoji_picker_flutter: ^4.3.0
+  bloc: ^9.0.0
 
 dev_dependencies:
   build_runner: ^2.5.4
