--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   flutter_contacts: ^1.1.9+2
   emoji_picker_flutter: ^4.3.0
   bloc: ^9.0.0
+  firebase_messaging: ^15.2.9
+  flutter_local_notifications: ^19.3.0
 
 dev_dependencies:
   build_runner: ^2.5.4
